--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,30 @@
     color: #000;
     text-decoration: none;
   }
+
+  #hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 20rem;
+    margin-top: 8rem;
+  }
+  
+  .hero-text {
+    margin-bottom: 2rem;
+    font-size: 2.5rem;
+  }
+  
+  #hero input[type="email"] {
+    width: 100%;
+    padding: 0.7rem;
+  }
+  
+  #hero input[type="submit"] {
+    width: 70%;
+    height: 4rem;
+    margin: 2rem 0;
+    transition: all 0.5s;
+  }
