--- a/css/style.css
+++ b/css/style.css
@@ -1,76 +1,122 @@
 #header {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 7.5rem;
-    padding: 0 2rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #eee;
-    z-index: 999;
-  }
-  
-  .logo-box {
-    height: 3.5rem;
-    display: flex;
-    align-items: center;
-    flex: 2;
-  }
-  
-  #header-img {
-    height: 100%;
-    margin-left: 2rem;
-  }
-  
-  #nav-bar {
-    flex: 1.5;
-    font-weight: 500;
-    font-size: 1.8rem;
-  }
-  
-  .main-nav-list {
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    padding-right: 2rem;
-    gap: 9rem;
-  }
-  
-  .main-nav-list > li {
-    list-style: none;
-  }
-  
-  .nav-link:link {
-    display: inline-block;
-    color: #000;
-    text-decoration: none;
-  }
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 7.5rem;
+  padding: 0 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #eee;
+  z-index: 999;
+}
 
-  #hero {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    height: 20rem;
-    margin-top: 8rem;
-  }
-  
-  .hero-text {
-    margin-bottom: 2rem;
-    font-size: 2.5rem;
-  }
-  
-  #hero input[type="email"] {
-    width: 100%;
-    padding: 0.7rem;
-  }
-  
-  #hero input[type="submit"] {
-    width: 70%;
-    height: 4rem;
-    margin: 2rem 0;
-    transition: all 0.5s;
-  }
+.logo-box {
+  height: 3.5rem;
+  display: flex;
+  align-items: center;
+  flex: 2;
+}
+
+#header-img {
+  height: 100%;
+  margin-left: 2rem;
+}
+
+#nav-bar {
+  flex: 1.5;
+  font-weight: 500;
+  font-size: 1.8rem;
+}
+
+.main-nav-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding-right: 2rem;
+  gap: 9rem;
+}
+
+.main-nav-list > li {
+  list-style: none;
+}
+
+.nav-link:link {
+  display: inline-block;
+  color: #000;
+  text-decoration: none;
+}
+
+#hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 20rem;
+  margin-top: 8rem;
+}
+
+.hero-text {
+  margin-bottom: 2rem;
+  font-size: 2.5rem;
+}
+
+#hero input[type="email"] {
+  width: 100%;
+  padding: 0.7rem;
+}
+
+#hero input[type="submit"] {
+  width: 70%;
+  height: 4rem;
+  margin: 2rem 0;
+  transition: all 0.5s;
+}
+
+#features {
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 4rem;
+}
+
+.marg {
+  margin: 0 auto;
+}
+
+.feature-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80rem;
+}
+
+.icon-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.icon {
+  height: 8rem;
+  width: 8rem;
+  color: #ff8c00;
+  margin: 3rem;
+}
+
+.feature-text {
+  padding: 2rem;
+}
+
+.feature-text > h2 {
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.feature-text > p {
+  font-size: 1.5rem;
+}
