--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@
   width: 100%;
 }
 
-pricing {
+#pricing {
   margin-top: 6rem;
   display: flex;
   align-items: center;
@@ -198,31 +198,31 @@ pricing {
 }
 
 #footer {
-    margin-top: 3rem;
-    background-color: #ddd;
-    padding: 2rem;
-  }
-  
-  #footer > ul {
-    display: flex;
-    justify-content: flex-end;
-  }
-  
-  #footer > ul > li {
-    padding: 0 1rem;
-    list-style: none;
-  }
-  
-  #footer > ul > li > a {
-    text-decoration: none;
-    color: #000;
-    font-size: 1.7rem;
-  }
-  
-  #footer > span {
-    margin-top: 0.5rem;
-    display: flex;
-    justify-content: flex-end;
-    font-size: 1.5em;
-    color: #444;
-  }
+  margin-top: 3rem;
+  background-color: #ddd;
+  padding: 2rem;
+}
+
+#footer > ul {
+  display: flex;
+  justify-content: flex-end;
+}
+
+#footer > ul > li {
+  padding: 0 1rem;
+  list-style: none;
+}
+
+#footer > ul > li > a {
+  text-decoration: none;
+  color: #000;
+  font-size: 1.7rem;
+}
+
+#footer > span {
+  margin-top: 0.5rem;
+  display: flex;
+  justify-content: flex-end;
+  font-size: 1.5em;
+  color: #444;
+}
